--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>playful-animal-names-generator</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
-    <meta property="og:image" content="/og-image.png" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <title>Animal Name Generator - 10,000+ Unique Pet Names | Find The Perfect Name</title>
+    <meta name="description" content="Discover the perfect name for your pet with our comprehensive Animal Name Generator. Access over 10,000 unique, creative, and meaningful names for all types of animals. From cats and dogs to exotic pets, find inspiration for your furry friend today!" />
+    <meta name="author" content="Animal Name Generator" />
+    <meta property="og:title" content="Animal Name Generator - Find The Perfect Pet Name" />
+    <meta property="og:description" content="Generate unique and meaningful names for your pets from our collection of 10,000+ creative animal names." />
+    <meta property="og:image" content="/favicon.svg" />
+    <meta property="og:type" content="website" />
   </head>
 
   <body>
