more pictures, and connected google analytics

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta property="og:description" content="Generate unique and meaningful names for your pets from our collection of 10,000+ creative animal names." />
     <meta property="og:image" content="/favicon.svg" />
     <meta property="og:type" content="website" />
+    <meta name="google-site-verification" content="G-BLBZ29FQ9R" />
   </head>
 
   <body>
