--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
     <meta property="og:image" content="/favicon.svg" />
     <meta property="og:type" content="website" />
     <meta name="google-site-verification" content="G-BLBZ29FQ9R" />
+    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BLBZ29FQ9R"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-BLBZ29FQ9R');
+    </script>
   </head>
 
   <body>
